[tool.poetry]
name = "balpy"
version = "0.0.0a70"
description = "Balancer V2 Python API"
authors = ["Greg <greg@orb.cl>"]
license = "GNU GPL 3"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
Cython="0.29.24"
cytoolz="0.11.2"
requests="2.25.1"
eth-abi="2.1.1"
gql="2.0.0"
multicaller=">=0.0.0a10"
jstyleson="0.0.2"
web3=">=5.19.0"

[tool.poetry.dev-dependencies]
pytest="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"