[tool.poetry]
name = "balpy"
version = "0.0.0a84"
description = "Balancer V2 Python API"
authors = ["Greg <greg@orb.cl>"]
license = "GNU GPL 3"

[tool.poetry.dependencies]
python = ">=3.10,<4"
Cython=">=0.29.24"
cytoolz="0.11.2"
requests=">=2.25.1"
eth-abi=">=2.1.1"
gql=">=2.0.0"
jstyleson=">=0.0.2"
web3="~6"
multicaller = {path = "../multicaller"}

[tool.poetry.dev-dependencies]
pytest="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
