[metadata]
name = balpy
version = 0.0.0a28
author = Langer
author_email = langer@balancer.fi
description = Balancer V2 Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://balancer.fi
project_urls =
    Bug Tracker = https://github.com/balancer-labs/balpy/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
	requests==2.25.1
	web3==5.19.0
	eth-abi==2.1.1
	gql==2.0.0
	multicall==0.1.3
